--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+.blind {display: none;}
+
 /* 스킵 내비게이션 */
 #skip {position: relative;}
 #skip a {position: absolute; left:0; top:-35px; border: 1px solid #fff; color: #fff; 
@@ -17,6 +19,38 @@
 .header .header_menu a{color: #fff; padding: 8px 0 6px 10px; display: inline-block;
     transition: color 0.3s ease;font-family: 'Abel', sans-serif;}
 .header .header_menu a:hover {color:#ccc;}
+
+.header .header_tit {text-align: center; text-transform:uppercase; margin-top: 55px;font-family: 'Abel', sans-serif;}
+.header .header_tit h1 {
+    font-size: 30px; 
+    color: #fff; 
+    background: #51b0dc; 
+    display: inline-block;
+    padding: 5px 30px 5px 30px;
+    letter-spacing: 2px;
+    font-weight: 900;
+    transition: box-shadow 0.25s ease-in-out;
+}
+.header .header_tit h1:hover {
+    box-shadow: 
+        inset -9em 0 0 0 #257fac,
+        inset 9em 0 0 0 #257fac;
+}
+
+.header .header_tit a{
+    font-size: 16px;
+    color: #fff;
+    background: #4a9abf;
+    display: inline-block;
+    padding: 10px 20px 10px 20px;
+    margin-top: -7px;
+    transition: box-shadow 0.25s ease-in-out;
+}
+.header .header_tit a:hover{
+    box-shadow:
+        inset 0 0 0 5PX rgba(75,154,191,0.9),
+        inset 0 0 0 100px rgba(0,0,0,0.1)
+}
 
 /* mediaquery */
 @media (max-width:1220px) {
