--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,21 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 #header{}
 #nav {background-color: #f6fdff;}
 #title {background-color: #eaf7fd;}
+#contents .container{
+    border-right: 1px solid #dbdbdb;
+    border-left: 1px solid #dbdbdb;
+}
+#cont_left {float: left; width: 250px; }
+#cont_center {overflow: hidden; margin-right: 250px; min-height: 1000px;
+    border-right: 1px solid #dbdbdb;
+    border-left: 1px solid #dbdbdb;
+    
+}
+#cont_right { position: absolute; right: 0; top: 0; width: 250px; }
+#footer {border-top: 1px solid #dbdbdb;}
 
 /* 컨테이너 */
-.container{width:1200px; margin: 0 auto; /*background: rgba(0, 0, 0, 0.3);*/ }
+.container{ position: relative; width:1200px; margin: 0 auto; /*background: rgba(0, 0, 0, 0.3);*/ }
 
 /* 헤더 */
 .header {height: 327px;}
@@ -156,7 +168,20 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
         0 0 0 100px rgba(0,0,0,0.1) inset;
 }
 
+/* 컨텐츠 영역 */
+.column {padding: 15px; border-bottom: 1px solid #dbdbdb;}
+.column .col_tit {font-size: 20px; color: #2f7fa6; padding-bottom: 5px;}
+.column .col_desc {border-bottom: 1px dashed #dbdbdb;padding-bottom: 15px; color: #878787; line-height: 18px;}
 
+.column .col1 {}
+.column .col2 {}
+.column .col3 {border-bottom: 0;}
+.column .col4 {}
+.column .col5 {}
+.column .col6 {border-bottom: 0;}
+.column .col7 {}
+.column .col8 {}
+.column .col9 {border-bottom: 0;}
 
 
 /* mediaquery */
@@ -165,6 +190,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 @media (max-width:1220px) {
     .container{width: 100%;}
     .row{padding: 0 15px;}
+    #contents .container {border: 0;}
     .title .btn{right: 5px;}
 }
 
@@ -175,6 +201,9 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 /* 화면 너비 0 ~ 960px */
 @media (max-width:960px) {
+    #cont_right {position: static;width: 100%; border-top: 1px solid #dbdbdb;}
+    #cont_center {margin-right: 0; border-right: 0;}
+
     .nav > div {float: none; width: 100%;}
     .nav > div:last-child {width: 100%;}
     .nav > div li {width: 33.33333%;}
@@ -184,7 +213,8 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 /* 화면 너비 0 ~ 768px */
 @media (max-width:768px) {
-    
+    #cont_left {float: none; width: 100%;}
+    #cont_center {border-left: 0;}
 }
 
 /* 화면 너비 0 ~ 600px */
