--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,25 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 .column .col8 {}
 .column .col9 {border-bottom: 0;}
 
+/*메뉴*/
+.menu {}
+.menu li {position: relative;}
+.menu li a {font-size: 16px; text-transform: uppercase;
+    color: #878787;
+    border-bottom: 1px solid #dbdbdb;
+    padding: 10px; display: block;
+    transition: box-shadow 0.34s ease, background 0.34s ease;
+}
+
+.menu li a i {
+    position: absolute; right: 10px; top:15px;
+}
+.menu li a:hover {
+    box-shadow: inset 180px 0 0 0 rgba(36,130,174,0.7);
+    color: #fff;
+    background: rgba(36,130,174,0.9);
+}
+
 
 /* mediaquery */
 
@@ -219,13 +238,25 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 /* 화면 너비 0 ~ 600px */
 @media (max-width:600px) {
-    .nav > div li {width: 50%;}
-    .nav > div:last-child li {width: 50%;}
-
     .header {height: auto;}
     .header .header_tit {display: none;}
     .header .header_icon {display: none;}
     .title .btn{display: none;}
+
+    .nav > div li {width: 50%;}
+    .nav > div:last-child li {width: 50%;}
+
+    .column.col1 .col_tit {display: none;}
+    .column.col1 .col_desc {display: none;}
+    .column.col1 .menu li a i {display: none;}
+    .column.col1  {padding: 0; border-bottom: 0;}
+    .column.col1 .menu ul  {overflow: hidden;}
+    .column.col1 .menu li  {float: left; width: 33.3333%; border-right: 1px solid #dbdbdb; text-align: center; box-sizing: border-box;}
+    .column.col1 .menu li:nth-child(3n)  {border-right: 0;}
+    .column.col1 .menu li a  {color: #fff; text-shadow: 0 0 5px rgba(0,0,0,0.7);}
+    .column.col1 .menu li a:hover { box-shadow: none; background: rgba(36,130,174,0.3);}
+    .column.col2 {background: #fff;}
+    .column.col4 {border-top: 1px solid #dbdbdb;}
 }
 
 /* 화면 너비 0 ~ 480px */
