--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,16 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     background: rgba(36,130,174,0.9);
 }
 
+/* 게시판1 */
+.notice1 h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 5px;}
+.notice1 li { position: relative; overflow: hidden;text-overflow: ellipsis; white-space: nowrap; padding-left: 8px; }
+.notice1 li::before {
+    content: '';
+    width: 3px; height: 3px;
+    border-radius: 50%;
+    background: #449ce2;
+    position:absolute; left: 0; top: 8px;
+}
 
 /* mediaquery */
 
