--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 }
 
 /* 컨텐츠 영역 */
-.column {padding: 15px; border-bottom: 1px solid #dbdbdb;}
+.column {padding: 15px; border-bottom: none;}
 .column .col_tit {font-size: 20px; color: #2f7fa6; padding-bottom: 5px;}
 .column .col_desc {border-bottom: 1px dashed #dbdbdb;padding-bottom: 15px; color: #878787; line-height: 18px;}
 
@@ -228,6 +228,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
+    padding-top: 3px;
     padding-left: 8px;
     padding-bottom: 3px;
     max-height: 40px; /* ie */
@@ -267,7 +268,7 @@ only screen and (min-resolution: 1.5dppx) {
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
 only screen and (min-device-pixel-ratio: 1.5),
 only screen and (min-resolution: 1.5dppx) {
-    .blog2 .img-retina {background-image: url(../img/blog3_@1.jpg);}
+    .blog2 .img-retina {background-image: url(../img/blog3_@2.jpg);}
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 3),
 only screen and (min-device-pixel-ratio: 3),
@@ -375,6 +376,73 @@ only screen and (min-resolution: 1.5dppx) {
 .video {position: relative ; width: 100%; padding-bottom:56.25% ;}
 .video iframe {position: absolute; width: 100%; height: 100%;}
 
+/* 푸터 */
+.footer {text-align: center; padding: 30px 50px;}
+.footer li { position: relative; display: inline; padding: 0 7px 0 10px; white-space: nowrap;}
+.footer li::before {content: ''; width: 1px; height: 12px; background-color:#dbdbdb; 
+    position: absolute; left: 0; top: 2px;}
+.footer li:first-child::before {width: 0;}
+.footer address {padding-top: 15px;}
+
+/* 사이드 이펙트1 */
+.side1 {position: relative; perspective: 600px; display: block;}
+.side1 .front {
+    transform-style: preserve-3d;
+    transform:rotateY(0deg);
+    transition: all 0.5s ease-in-out;
+    backface-visibility: hidden;
+}
+
+.side1 .back {
+    position: absolute; top: 0; left: 0;
+    width: 100%; height: 100%; z-index: -1;
+    transform-style: preserve-3d;
+    color: #fff;
+    background: #4038dc;
+    transform:rotateY(-180deg);
+    transition: all 0.5s ease-in-out;
+    backface-visibility: hidden;
+}
+.side1 i {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); font-size: 70px;}
+.side1:hover .front{transform:rotateY(180deg);}
+.side1:hover .back{transform:rotateY(0deg); z-index: 1;}
+
+/* 사이드 이펙트2 */
+.side2 {position: relative; perspective: 600px; display: block;}
+.side2 .front {
+    transform-style: preserve-3d;
+    transform: rotateY(0deg);
+    transition: all 0.5s ease-in-out;
+    backface-visibility: hidden;
+}
+.side2 .back {
+    position: absolute; top: 0; left: 0;
+    width: 100%; height: 100%; z-index: -1;
+    transform-style: preserve-3d;
+    transform: rotateY(-180deg);
+    transition: all 0.5s ease-in-out;
+    backface-visibility: hidden;
+}
+.side2 .front figcaption {
+    position: absolute; left: 50%; top: 50%;
+    transform: translate(-50%, -50%) translateZ(100px) ;
+    display: block;
+    text-align: center;
+}
+.side2 .back figcaption {
+    position: absolute; left: 50%; top: 50%;
+    transform: translate(-50%, -50%) translateZ(100px) ;    
+    display: block;
+    text-align: center;
+}
+.side2 figcaption {width: 60%;
+    color: #fff; font-size: 20px; font-family: 'Abel'; font-weight:bold; 
+    background: rgba(0,0,0,0.5);}
+.side2:hover .front {transform: rotateY(180deg);}
+.side2:hover .back {transform: rotateY(0deg); z-index: 1;}
+
+
+
 /* mediaquery */
 
 /* 화면 너비 0 ~ 1220px */
@@ -400,12 +468,17 @@ only screen and (min-resolution: 1.5dppx) {
 @media (max-width:960px) {
     #cont_right {position: static;width: 100%; border-top: 1px solid #dbdbdb;}
     #cont_center {margin-right: 0; border-right: 0;}
-
+    
     .nav > div {float: none; width: 100%;}
     .nav > div:last-child {width: 100%;}
     .nav > div li {width: 33.33333%;}
     .nav > div:last-child li {width: 33.33333%;}
     .nav > div ol {margin-bottom: 10px;}
+
+    #cont_right {overflow: hidden;}
+    #cont_right .column {float: left; width: 33.3333%; box-sizing: border-box;}
+    #cont_right .column.col7 {border-right: 1px solid #dbdbdb; border-bottom: 0;}
+    #cont_right .column.col8 {border-right: 1px solid #dbdbdb; border-bottom: 0;}
 }
 
 /* 화면 너비 0 ~ 768px */
@@ -447,6 +520,9 @@ only screen and (min-resolution: 1.5dppx) {
     .square a {width: 49%;}
     .square a:nth-child(5){display: none;}
     
+    #cont_right .column {width: 50%;}
+    #cont_right .column.col8 {border-right: 0;}
+    #cont_right .column.col9 {display: none;}
 }
 
 /* 화면 너비 0 ~ 480px */
@@ -463,5 +539,8 @@ only screen and (min-resolution: 1.5dppx) {
 
     .square a {width: 100%; margin-right: 0;margin-left: 0;}
     .square a:nth-child(5){display: none;}
+
+    #cont_right .column {width: 100%;}
+    #cont_right .column.col7 {border-right: 0; border-bottom: 1px solid #dbdbdb;}
     
 }
