--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     border-left: 1px solid #dbdbdb;
 }
 #cont_left {float: left; width: 250px; }
-#cont_center {overflow: hidden; margin-right: 250px; min-height: 1000px;
+#cont_center {overflow: hidden; margin-right: 250px; min-height: 1350px;
     border-right: 1px solid #dbdbdb;
     border-left: 1px solid #dbdbdb;
     
@@ -169,19 +169,19 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 }
 
 /* 컨텐츠 영역 */
-.column {padding: 15px; border-bottom: none;}
+.column {padding: 15px; border-bottom: 1px solid #dbdbdb;}
 .column .col_tit {font-size: 20px; color: #2f7fa6; padding-bottom: 5px;}
 .column .col_desc {border-bottom: 1px dashed #dbdbdb;padding-bottom: 15px; color: #878787; line-height: 18px;}
 
-.column .col1 {}
-.column .col2 {}
-.column .col3 {border-bottom: 0;}
-.column .col4 {}
-.column .col5 {}
-.column .col6 {border-bottom: 0;}
-.column .col7 {}
-.column .col8 {}
-.column .col9 {border-bottom: 0;}
+.column.col1 {}
+.column.col2 {}
+.column.col3 {border-bottom: 0px;}
+.column.col4 {}
+.column.col5 {}
+.column.col6 {border-bottom: 0;}
+.column.col7 {}
+.column.col8 {}
+.column.col9 {border-bottom: 0;}
 
 /*메뉴*/
 .menu {}
@@ -441,7 +441,31 @@ only screen and (min-resolution: 1.5dppx) {
 .side2:hover .front {transform: rotateY(180deg);}
 .side2:hover .back {transform: rotateY(0deg); z-index: 1;}
 
-
+/* 사이드 이펙트3 */
+.side3 {position: relative; overflow: hidden; background: #fff;}
+.side3 figcaption {
+    position: absolute; top: 50%; left: 50%;
+    color: #fff; text-align: center;
+    opacity: 0;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    transform: translate(350%, -50%) rotate(180deg);
+}
+.side3 figcaption:after {
+    content: '';
+    width: 100px;height: 100px;
+    background: #000; border-radius: 50%;
+    position: absolute; left: 50%;top: 50%;z-index: -1;
+    transform: translate(-50%, -50%);
+}
+.side3 figcaption h3 {font-size: 16px;}
+.side3 figcaption em {display: block; font-weight: bold;}
+.side3 img {display: block; transition: all 0.3s ease; }
+.side3:hover img { opacity: 0.4;}
+.side3:hover figcaption {
+    transform: translate(-50%, -50%) rotate(0deg);
+    opacity: 1;
+}
 
 /* mediaquery */
 
